--- a/app/style.css
+++ b/app/style.css
@@ -46,3 +46,9 @@
 #help .note {
     cursor: default;
 }
+
+.clickme, .clickme2 {
+    width: 20px;
+    height: 20px;
+    background-color: gold;
+}
