--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,7 @@
+.notesmanager {
+    display:none;
+}
+
 #notes {
     border: 1px solid #999;
     width: 500px;
@@ -51,4 +55,25 @@
     width: 20px;
     height: 20px;
     background-color: gold;
+}
+
+.images {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: url(http://sierrafire.cr.usgs.gov/images/loading.gif) center no-repeat;
+    opacity: 0;
+    -webkit-transition: opacity 1s;
+}
+
+.loading div {
+    opacity: 1;
+}
+
+img {
+    margin: 0;
+    border: 0;
+    width: 50%;
 }
